[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/ball_negative.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/ball_positive.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Ball.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "positive",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "negative",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 35.2071

[node name="Ball" type="RigidBody2D"]
mass = 0.01
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 2 )
animation = "negative"

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Polarity_inverter" type="Timer" parent="."]
wait_time = 10.0

[node name="Magnetic_Timer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="timeout" from="Polarity_inverter" to="." method="_on_Polarity_inverter_timeout"]
[connection signal="timeout" from="Magnetic_Timer" to="." method="_on_Magnetic_Timer_timeout"]
